on resume and pause code

--- a/src/pages/wallet/wallet.html
+++ b/src/pages/wallet/wallet.html
@@ -6,18 +6,38 @@
 -->
 <ion-header>
 
-  <ion-navbar color="primary">
-    <ion-title>ChiCoin Wallet</ion-title>
+  <ion-navbar color="dark">
+    <ion-title>
+      <img alt="ChiCoin Wallet" height="40" src="assets/img/cbp.jpeg" />
+    </ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-  <h1>0 CHI</h1>
-  <p *ngIf="account">{{ account.address }}</p>
-  <canvas id="qr"></canvas>
+  <div class="centerMe">
+    <h1>ChiCoin Wallet</h1>
+    <div class="bal centerMe">{{ bal }} CHI</div>
+    <p *ngIf="account">{{ account.address }}</p>
+    <canvas id="qr"></canvas>
 
-  <button ion-button color="secondary" (click)="sendAttendanceGossip()">Send Attendance Gossip to earn CHI</button>
- 
+    <ion-item>
+      <ion-label color="primary" floating>Enter your name</ion-label>
+      <ion-input [(ngModel)]="name"></ion-input>
+    </ion-item>
+  </div>
+
+
 </ion-content>
+
+<ion-footer style="border: 0px solid">
+  <ion-toolbar transparent style="border: 0px solid">
+    <div class="centerMe">
+      <button ion-button icon-end color="primary" round (click)="sendAttendanceGossip()">
+        Send Attendance Gossip to earn CHI
+        <ion-icon name="md-send"></ion-icon>
+      </button>
+    </div>
+  </ion-toolbar>
+</ion-footer>
