--- a/src/pages/wallet/wallet.html
+++ b/src/pages/wallet/wallet.html
@@ -27,14 +27,19 @@
       <ion-input [(ngModel)]="name"></ion-input>
     </ion-item>
 
-    <ion-list>
-        <button ion-item *ngFor="let item of validators" (click)="itemSelected(item)">
-          {{ item }} validate you
-        </button>  
-      </ion-list>
+    <h3>Attendace List</h3>
+    <ion-list inset *ngFor="let attendee of attendeeList;">
+        <ion-item >
+            <h1>{{ attendee.name }}</h1>
+            <h2>{{ attendee.publicAddress }}</h2>
+            <p> {{ attendee.time }}</p>
+        </ion-item>
+    </ion-list>
+    
+   
 
   </div>
-
+  
 
 </ion-content>
 
