--- a/src/pages/wallet/wallet.html
+++ b/src/pages/wallet/wallet.html
@@ -19,7 +19,7 @@
   <div class="centerMe">
     <h1>ChiCoin Wallet</h1>
     <div class="bal centerMe">{{ bal }} CHI</div>
-    <p *ngIf="account">{{ account.address }}</p>
+    <p *ngIf="account">{{ account.address }} - {{ eth }} ETH</p>
     <canvas id="qr"></canvas>
 
     <ion-item>
